--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "lite-server"
+    "start": "lite-server",
+    "watch": "tsc --watch"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
